基本功能调通
