# src/main/java/com/hsbc/rbcs/application/BalanceApiDelegateImpl.java
@@ -3,8 +3,11 @@ package com.hsbc.rbcs.application;
 import com.hsbc.rbcs.api.BalanceApiDelegate;
 import com.hsbc.rbcs.domain.FinancialService;
 import com.hsbc.rbcs.infrastructure.dao.entity.Account;
+import com.hsbc.rbcs.infrastructure.dao.entity.Transaction;
 import com.hsbc.rbcs.infrastructure.mapper.AccountMapper;
+import com.hsbc.rbcs.infrastructure.mapper.TransactionMapper;
 import com.hsbc.rbcs.model.AccountBalance;
+import com.hsbc.rbcs.model.HealthCheck200Response;
 import com.hsbc.rbcs.model.TransactionRequest;
 import com.hsbc.rbcs.model.TransactionResponse;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -21,10 +24,15 @@ public class BalanceApiDelegateImpl implements BalanceApiDelegate {
     private FinancialService financialService;
 
     @Override
+    public ResponseEntity<HealthCheck200Response> healthCheck() {
+        return ResponseEntity.ok().build();
+    }
+
+    @Override
     public ResponseEntity<TransactionResponse> balanceTransaction(TransactionRequest transactionRequest) {
-        String result = financialService.transfer(transactionRequest.getSourceAccount(), transactionRequest.getDestAccount(),
+        Transaction result = financialService.transfer(transactionRequest.getSourceAccount(), transactionRequest.getDestAccount(),
                 BigDecimal.valueOf(transactionRequest.getAmount()));
-        return ResponseEntity.ok(new TransactionResponse());
+        return ResponseEntity.ok(TransactionMapper.INSTANCE.entityToResponse(result));
     }
 
     @Override
